--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="toolbarColor">#FFF</color>
     <color name="instaAccent">#405DE6</color>
     <color name="whatsappAccent">#25D366</color>
-    <color name="youtubeAccent">#F44336</color>
+    <color name="yAccent">#F44336</color>
     <color name="tranluentTextColor">#80000000</color>
     <color name="commonToolAccent">#FC6D55</color>
 
