--- a/app/src/main/res/layout/activity_main_u.xml
+++ b/app/src/main/res/layout/activity_main_u.xml
@@ -63,7 +63,7 @@
                 android:layout_marginTop="20dp"
                 android:textSize="19sp"
                 android:text="1. Open Youtube"
-                android:textColor="@color/youtubeAccent"
+                android:textColor="@color/yAccent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
